<resources>
    <!-- Scheduler Strings -->
    <string name="app_name">Doctors Orders</string>
    <string name="caretaker_dashboard">CareTaker Dashboard</string>
    <string name="taken_at">Taken At: %s</string>
    <string name="schedulerName">%s</string>
    <string name="search_by_last_name">Search by Last Name</string>
    <string name="report_name">%s\'s Medicine Schedule</string>

    <!-- Patient's strings -->
    <string name="patient_db">Patient</string>
    <string name="patient_initial_message">Your next Medicine: </string>
    <string name="patient_medicine" formatted="true">Name: %s</string>
    <string name="patient_medicine_time" formatted="true">When: %s</string>
    <string name="patient_pills">Pills: %s</string>
    <string name="description">Medicine Image</string>
    <string name="patient_medicine_instructions">%s</string>
    <string name="channel_name">Time to take Medicine!</string>
    <string name="channel_description">Description</string>
    <string name="displayInitialText">Time to take your Medicine!</string>
    <string name="displayFinalText">Did you take your Medicine?</string>
    <string name="displayMedicine">Time to take %s</string>
    <string name="default_text_1">No Medications are assigned!\nPlease wait for Scheduler to assign!</string>
    <string name="displayText">%s</string>
    <string name="wait">%s</string>

    <!-- LogIn strings -->
    <string name="loading1">Checking for Account</string>
    <string name="loading2">Verifying Account</string>
    <string name="loading3">Welcome Back</string>

    <string name="patient">Patient</string>
    <string name="scheduler">Scheduler</string>
    <string name="observer">Observer</string>

    <string name="needAccount">Don\'t have an Account?</string>

    <string name="accessQ1">Do you have problems with reading text on a phone screen?</string>
    <string name="accessQ2">Do you have problems hearing conversations</string>
    <string name="accessQ3">Would you like larger text sizes anyway?</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
</resources>