<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/patient_initial_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/patient_initial_message"
            android:textStyle="bold"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/patient_medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_medicine"
            android:textStyle="bold"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/patient_medicine_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_medicine_time"
            android:textStyle="bold"
            android:textSize="30sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>