<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:alpha="0.8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="top"
        android:orientation="vertical">

        <!-- Logo/App Name. Should scale to the screen's size. -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/Title" />

        <!-- User Login Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/patientLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/patient"
                android:textSize="@dimen/Header2" />

            <Button
                android:id="@+id/schedulerLogin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/scheduler"
                android:textSize="@dimen/Header2" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>